[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/rutex",
    "projects/rutex-types",
    "projects/rutex-parser",
    "projects/knuth-plass",
    "projects/rutex-wit",
    "projects/rutex-renderer-mathml",
]
exclude = [
    "projects/.DS_Store",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true
