[package]
name = "rutex-renderer-image"
version = "0.1.0"
edition = "2021"

[dependencies]
rutex-types = { path = "../rutex-types" }
rutex-layout = { path = "../rutex-layout" }
rutex-font = { path = "../rutex-font" }
tiny-skia = "0.11"
ttf-parser = "0.20"
serde = { version = "1.0", features = ["derive"] }
