[package]
name = "rutex-renderer-image"
version = "0.1.0"
edition = "2021"

[dependencies]
rutex-types = { path = "../rutex-types" }
rutex-layout = { path = "../rutex-layout" }
rutex-renderer-svg = { path = "../rutex-renderer-svg" }
resvg = "0.42"
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
