[package]
name = "rutex-renderer-svg"
version = "0.1.0"
edition = "2021"

[dependencies]
rutex-types = { path = "../rutex-types" }
rutex-layout = { path = "../rutex-layout" }
rutex-font = { path = "../rutex-font" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
