[package]
name = "rutex"
version = "0.1.0"
edition = "2021"
description = "Pure Rust TeX formula rendering engine"

[dependencies]
rutex-types = { path = "../rutex-types" }
rutex-parser = { path = "../rutex-parser" }
rutex-layout = { path = "../rutex-layout" }
rutex-font = { path = "../rutex-font" }
# rutex-renderer = { path = "../rutex-renderer" }
rutex-renderer-svg = { path = "../rutex-renderer-svg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
dashmap = "5.4"
arc-swap = "1.6"
hashbrown = { version = "0.14", features = ["serde"] }
